[project]
name = "ghostliness"
version = "0.1.0"
description = "A Python Minecraft Java Edition server framework."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "GHOSTLINESS contributors" }
]
dependencies = [
    "loguru>=0.7.3",
    "nbtlib>=2.0.4",
]

[project.scripts]
ghostliness = "ghostliness.cli:main"

[project.entry-points."ghostliness.plugins"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.9",
  "ty>=0.0.1a23",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ghostliness"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
